temp_parser.output
Terminals unused in grammar

   DOCTYPE


Grammar

    0 $accept: html_start $end

    1 html_start: HTML_S content HTML_E

    2 content: content_head content_body

    3 content_head: HEAD_S content_head content_title content_head HEAD_E
    4             | DATA
    5             | %empty

    6 content_title: TITLE_S DATA TITLE_E

    7 content_body: BODY_S body BODY_E

    8 body: body href_tag data
    9     | body font_tag data
   10     | body center_tag data
   11     | body br_tag data
   12     | body p_tag data
   13     | body header_tag data
   14     | body list_tag data
   15     | body div_tag data
   16     | body format_tag data
   17     | body subsup_tag data
   18     | body img_tag data
   19     | body table_tag data
   20     | data

   21 data: data DATA
   22     | data GREEK
   23     | data COMMENT
   24     | %empty

   25 href_tag: HREF_S content_href body HREF_E

   26 content_href: content_href HREF_LINK
   27             | content_href HREF_TITLE
   28             | content_href HREF_NAME
   29             | %empty

   30 font_tag: FONT_S content_font body FONT_E

   31 content_font: content_font FONT_SIZE
   32             | %empty

   33 p_tag: P_S body P_E

   34 center_tag: CENTER_S body CENTER_E

   35 br_tag: BR
   36       | BR_S

   37 img_tag: IMG_S content_img IMG_E fig_caption
   38        | FIG_S IMG_S content_img IMG_E fig_caption FIG_E

   39 fig_caption: FIGCAP_S body FIGCAP_E
   40            | %empty

   41 content_img: content_img IMG_SRC
   42            | content_img IMG_HEIGHT
   43            | content_img IMG_WIDTH
   44            | %empty

   45 div_tag: DIV_S body DIV_E

   46 subsup_tag: SUP_S body SUP_E
   47           | SUB_S body SUB_E

   48 format_tag: U_S body U_E
   49           | B_S body B_E
   50           | I_S body I_E
   51           | EM_S body EM_E
   52           | TT_S body TT_E
   53           | STRONG_S body STRONG_E
   54           | SMALL_S body SMALL_E

   55 header_tag: H1_S body H1_E
   56           | H2_S body H2_E
   57           | H3_S body H3_E
   58           | H4_S body H4_E

   59 table_tag: TABLE_S content_table caption_data table_contents TABLE_E

   60 content_table: TABLE_BORDER
   61              | %empty

   62 table_contents: table_contents TR_S tr_data TR_E
   63               | %empty

   64 caption_data: CAPTION_S body CAPTION_E
   65             | %empty

   66 tr_data: tr_data TH_S body TH_E
   67        | tr_data TD_S body TD_E
   68        | %empty

   69 list_tag: UL_S inner_list_l UL_E
   70         | OL_S inner_list_l OL_E
   71         | DL_S inner_list_dl DL_E

   72 inner_list_l: inner_list_l LI_S body LI_E
   73             | inner_list_l UL_S inner_list_l UL_E
   74             | inner_list_l OL_S inner_list_l OL_E
   75             | inner_list_l DL_S inner_list_dl DL_E
   76             | %empty

   77 inner_list_dl: DD_S body DD_E inner_list_dl
   78              | DT_S body DT_E inner_list_dl
   79              | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
DOCTYPE (258)
HTML_S (259) 1
HTML_E (260) 1
HEAD_S (261) 3
HEAD_E (262) 3
TITLE_S (263) 6
TITLE_E (264) 6
BODY_S (265) 7
BODY_E (266) 7
HREF_S (267) 25
HREF_E (268) 25
FONT_S (269) 30
FONT_E (270) 30
CENTER_S (271) 34
CENTER_E (272) 34
BR (273) 35
P_S (274) 33
P_E (275) 33
H1_S (276) 55
H1_E (277) 55
H2_S (278) 56
H2_E (279) 56
H3_S (280) 57
H3_E (281) 57
H4_S (282) 58
H4_E (283) 58
UL_S (284) 69 73
UL_E (285) 69 73
LI_S (286) 72
LI_E (287) 72
OL_S (288) 70 74
OL_E (289) 70 74
TD_S (290) 67
DL_S (291) 71 75
TD_E (292) 67
DL_E (293) 71 75
DT_S (294) 78
DT_E (295) 78
DD_S (296) 77
DD_E (297) 77
DIV_S (298) 45
DIV_E (299) 45
U_S (300) 48
U_E (301) 48
B_S (302) 49
B_E (303) 49
I_S (304) 50
I_E (305) 50
EM_S (306) 51
EM_E (307) 51
TT_S (308) 52
TT_E (309) 52
STRONG_S (310) 53
STRONG_E (311) 53
SMALL_S (312) 54
SMALL_E (313) 54
SUB_S (314) 47
SUB_E (315) 47
SUP_S (316) 46
SUP_E (317) 46
TABLE_S (318) 59
TABLE_E (319) 59
CAPTION_S (320) 64
CAPTION_E (321) 64
TH_S (322) 66
TH_E (323) 66
TR_S (324) 62
TR_E (325) 62
HREF_LINK (326) 26
FONT_SIZE (327) 31
HREF_TITLE (328) 27
IMG_S (329) 37 38
IMG_SRC (330) 41
IMG_WIDTH (331) 43
IMG_HEIGHT (332) 42
FIG_S (333) 38
DATA (334) 4 6 21
GREEK (335) 22
TABLE_BORDER (336) 60
FIG_E (337) 38
IMG_E (338) 37 38
FIGCAP_S (339) 39
FIGCAP_E (340) 39
BR_S (341) 36
HREF_NAME (342) 28
COMMENT (343) 23


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
html_start (90)
    on left: 1, on right: 0
content (91)
    on left: 2, on right: 1
content_head (92)
    on left: 3 4 5, on right: 2 3
content_title (93)
    on left: 6, on right: 3
content_body (94)
    on left: 7, on right: 2
body (95)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20, on right: 7 8 9
    10 11 12 13 14 15 16 17 18 19 25 30 33 34 39 45 46 47 48 49 50
    51 52 53 54 55 56 57 58 64 66 67 72 77 78
data (96)
    on left: 21 22 23 24, on right: 8 9 10 11 12 13 14 15 16 17 18
    19 20 21 22 23
href_tag (97)
    on left: 25, on right: 8
content_href (98)
    on left: 26 27 28 29, on right: 25 26 27 28
font_tag (99)
    on left: 30, on right: 9
content_font (100)
    on left: 31 32, on right: 30 31
p_tag (101)
    on left: 33, on right: 12
center_tag (102)
    on left: 34, on right: 10
br_tag (103)
    on left: 35 36, on right: 11
img_tag (104)
    on left: 37 38, on right: 18
fig_caption (105)
    on left: 39 40, on right: 37 38
content_img (106)
    on left: 41 42 43 44, on right: 37 38 41 42 43
div_tag (107)
    on left: 45, on right: 15
subsup_tag (108)
    on left: 46 47, on right: 17
format_tag (109)
    on left: 48 49 50 51 52 53 54, on right: 16
header_tag (110)
    on left: 55 56 57 58, on right: 13
table_tag (111)
    on left: 59, on right: 19
content_table (112)
    on left: 60 61, on right: 59
table_contents (113)
    on left: 62 63, on right: 59 62
caption_data (114)
    on left: 64 65, on right: 59
tr_data (115)
    on left: 66 67 68, on right: 62 66 67
list_tag (116)
    on left: 69 70 71, on right: 14
inner_list_l (117)
    on left: 72 73 74 75 76, on right: 69 70 72 73 74 75
inner_list_dl (118)
    on left: 77 78 79, on right: 71 75 77 78


State 0

    0 $accept: . html_start $end

    HTML_S  shift, and go to state 1

    html_start  go to state 2


State 1

    1 html_start: HTML_S . content HTML_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 5 (content_head)

    content       go to state 5
    content_head  go to state 6


State 2

    0 $accept: html_start . $end

    $end  shift, and go to state 7


State 3

    3 content_head: HEAD_S . content_head content_title content_head HEAD_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 5 (content_head)

    content_head  go to state 8


State 4

    4 content_head: DATA .

    $default  reduce using rule 4 (content_head)


State 5

    1 html_start: HTML_S content . HTML_E

    HTML_E  shift, and go to state 9


State 6

    2 content: content_head . content_body

    BODY_S  shift, and go to state 10

    content_body  go to state 11


State 7

    0 $accept: html_start $end .

    $default  accept


State 8

    3 content_head: HEAD_S content_head . content_title content_head HEAD_E

    TITLE_S  shift, and go to state 12

    content_title  go to state 13


State 9

    1 html_start: HTML_S content HTML_E .

    $default  reduce using rule 1 (html_start)


State 10

    7 content_body: BODY_S . body BODY_E

    $default  reduce using rule 24 (data)

    body  go to state 14
    data  go to state 15


State 11

    2 content: content_head content_body .

    $default  reduce using rule 2 (content)


State 12

    6 content_title: TITLE_S . DATA TITLE_E

    DATA  shift, and go to state 16


State 13

    3 content_head: HEAD_S content_head content_title . content_head HEAD_E

    HEAD_S  shift, and go to state 3
    DATA    shift, and go to state 4

    $default  reduce using rule 5 (content_head)

    content_head  go to state 17


State 14

    7 content_body: BODY_S body . BODY_E
    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data

    BODY_E    shift, and go to state 18
    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 15

   20 body: data .
   21 data: data . DATA
   22     | data . GREEK
   23     | data . COMMENT

    DATA     shift, and go to state 57
    GREEK    shift, and go to state 58
    COMMENT  shift, and go to state 59

    $default  reduce using rule 20 (body)


State 16

    6 content_title: TITLE_S DATA . TITLE_E

    TITLE_E  shift, and go to state 60


State 17

    3 content_head: HEAD_S content_head content_title content_head . HEAD_E

    HEAD_E  shift, and go to state 61


State 18

    7 content_body: BODY_S body BODY_E .

    $default  reduce using rule 7 (content_body)


State 19

   25 href_tag: HREF_S . content_href body HREF_E

    $default  reduce using rule 29 (content_href)

    content_href  go to state 62


State 20

   30 font_tag: FONT_S . content_font body FONT_E

    $default  reduce using rule 32 (content_font)

    content_font  go to state 63


State 21

   34 center_tag: CENTER_S . body CENTER_E

    $default  reduce using rule 24 (data)

    body  go to state 64
    data  go to state 15


State 22

   35 br_tag: BR .

    $default  reduce using rule 35 (br_tag)


State 23

   33 p_tag: P_S . body P_E

    $default  reduce using rule 24 (data)

    body  go to state 65
    data  go to state 15


State 24

   55 header_tag: H1_S . body H1_E

    $default  reduce using rule 24 (data)

    body  go to state 66
    data  go to state 15


State 25

   56 header_tag: H2_S . body H2_E

    $default  reduce using rule 24 (data)

    body  go to state 67
    data  go to state 15


State 26

   57 header_tag: H3_S . body H3_E

    $default  reduce using rule 24 (data)

    body  go to state 68
    data  go to state 15


State 27

   58 header_tag: H4_S . body H4_E

    $default  reduce using rule 24 (data)

    body  go to state 69
    data  go to state 15


State 28

   69 list_tag: UL_S . inner_list_l UL_E

    $default  reduce using rule 76 (inner_list_l)

    inner_list_l  go to state 70


State 29

   70 list_tag: OL_S . inner_list_l OL_E

    $default  reduce using rule 76 (inner_list_l)

    inner_list_l  go to state 71


State 30

   71 list_tag: DL_S . inner_list_dl DL_E

    DT_S  shift, and go to state 72
    DD_S  shift, and go to state 73

    $default  reduce using rule 79 (inner_list_dl)

    inner_list_dl  go to state 74


State 31

   45 div_tag: DIV_S . body DIV_E

    $default  reduce using rule 24 (data)

    body  go to state 75
    data  go to state 15


State 32

   48 format_tag: U_S . body U_E

    $default  reduce using rule 24 (data)

    body  go to state 76
    data  go to state 15


State 33

   49 format_tag: B_S . body B_E

    $default  reduce using rule 24 (data)

    body  go to state 77
    data  go to state 15


State 34

   50 format_tag: I_S . body I_E

    $default  reduce using rule 24 (data)

    body  go to state 78
    data  go to state 15


State 35

   51 format_tag: EM_S . body EM_E

    $default  reduce using rule 24 (data)

    body  go to state 79
    data  go to state 15


State 36

   52 format_tag: TT_S . body TT_E

    $default  reduce using rule 24 (data)

    body  go to state 80
    data  go to state 15


State 37

   53 format_tag: STRONG_S . body STRONG_E

    $default  reduce using rule 24 (data)

    body  go to state 81
    data  go to state 15


State 38

   54 format_tag: SMALL_S . body SMALL_E

    $default  reduce using rule 24 (data)

    body  go to state 82
    data  go to state 15


State 39

   47 subsup_tag: SUB_S . body SUB_E

    $default  reduce using rule 24 (data)

    body  go to state 83
    data  go to state 15


State 40

   46 subsup_tag: SUP_S . body SUP_E

    $default  reduce using rule 24 (data)

    body  go to state 84
    data  go to state 15


State 41

   59 table_tag: TABLE_S . content_table caption_data table_contents TABLE_E

    TABLE_BORDER  shift, and go to state 85

    $default  reduce using rule 61 (content_table)

    content_table  go to state 86


State 42

   37 img_tag: IMG_S . content_img IMG_E fig_caption

    $default  reduce using rule 44 (content_img)

    content_img  go to state 87


State 43

   38 img_tag: FIG_S . IMG_S content_img IMG_E fig_caption FIG_E

    IMG_S  shift, and go to state 88


State 44

   36 br_tag: BR_S .

    $default  reduce using rule 36 (br_tag)


State 45

    8 body: body href_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 89


State 46

    9 body: body font_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 90


State 47

   12 body: body p_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 91


State 48

   10 body: body center_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 92


State 49

   11 body: body br_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 93


State 50

   18 body: body img_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 94


State 51

   15 body: body div_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 95


State 52

   17 body: body subsup_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 96


State 53

   16 body: body format_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 97


State 54

   13 body: body header_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 98


State 55

   19 body: body table_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 99


State 56

   14 body: body list_tag . data

    $default  reduce using rule 24 (data)

    data  go to state 100


State 57

   21 data: data DATA .

    $default  reduce using rule 21 (data)


State 58

   22 data: data GREEK .

    $default  reduce using rule 22 (data)


State 59

   23 data: data COMMENT .

    $default  reduce using rule 23 (data)


State 60

    6 content_title: TITLE_S DATA TITLE_E .

    $default  reduce using rule 6 (content_title)


State 61

    3 content_head: HEAD_S content_head content_title content_head HEAD_E .

    $default  reduce using rule 3 (content_head)


State 62

   25 href_tag: HREF_S content_href . body HREF_E
   26 content_href: content_href . HREF_LINK
   27             | content_href . HREF_TITLE
   28             | content_href . HREF_NAME

    HREF_LINK   shift, and go to state 101
    HREF_TITLE  shift, and go to state 102
    HREF_NAME   shift, and go to state 103

    $default  reduce using rule 24 (data)

    body  go to state 104
    data  go to state 15


State 63

   30 font_tag: FONT_S content_font . body FONT_E
   31 content_font: content_font . FONT_SIZE

    FONT_SIZE  shift, and go to state 105

    $default  reduce using rule 24 (data)

    body  go to state 106
    data  go to state 15


State 64

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   34 center_tag: CENTER_S body . CENTER_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    CENTER_E  shift, and go to state 107
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 65

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   33 p_tag: P_S body . P_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    P_E       shift, and go to state 108
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 66

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   55 header_tag: H1_S body . H1_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H1_E      shift, and go to state 109
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 67

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   56 header_tag: H2_S body . H2_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H2_E      shift, and go to state 110
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 68

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   57 header_tag: H3_S body . H3_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H3_E      shift, and go to state 111
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 69

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   58 header_tag: H4_S body . H4_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    H4_E      shift, and go to state 112
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 70

   69 list_tag: UL_S inner_list_l . UL_E
   72 inner_list_l: inner_list_l . LI_S body LI_E
   73             | inner_list_l . UL_S inner_list_l UL_E
   74             | inner_list_l . OL_S inner_list_l OL_E
   75             | inner_list_l . DL_S inner_list_dl DL_E

    UL_S  shift, and go to state 113
    UL_E  shift, and go to state 114
    LI_S  shift, and go to state 115
    OL_S  shift, and go to state 116
    DL_S  shift, and go to state 117


State 71

   70 list_tag: OL_S inner_list_l . OL_E
   72 inner_list_l: inner_list_l . LI_S body LI_E
   73             | inner_list_l . UL_S inner_list_l UL_E
   74             | inner_list_l . OL_S inner_list_l OL_E
   75             | inner_list_l . DL_S inner_list_dl DL_E

    UL_S  shift, and go to state 113
    LI_S  shift, and go to state 115
    OL_S  shift, and go to state 116
    OL_E  shift, and go to state 118
    DL_S  shift, and go to state 117


State 72

   78 inner_list_dl: DT_S . body DT_E inner_list_dl

    $default  reduce using rule 24 (data)

    body  go to state 119
    data  go to state 15


State 73

   77 inner_list_dl: DD_S . body DD_E inner_list_dl

    $default  reduce using rule 24 (data)

    body  go to state 120
    data  go to state 15


State 74

   71 list_tag: DL_S inner_list_dl . DL_E

    DL_E  shift, and go to state 121


State 75

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   45 div_tag: DIV_S body . DIV_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    DIV_E     shift, and go to state 122
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 76

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   48 format_tag: U_S body . U_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    U_E       shift, and go to state 123
    B_S       shift, and go to state 33
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44

    href_tag    go to state 45
    font_tag    go to state 46
    p_tag       go to state 47
    center_tag  go to state 48
    br_tag      go to state 49
    img_tag     go to state 50
    div_tag     go to state 51
    subsup_tag  go to state 52
    format_tag  go to state 53
    header_tag  go to state 54
    table_tag   go to state 55
    list_tag    go to state 56


State 77

    8 body: body . href_tag data
    9     | body . font_tag data
   10     | body . center_tag data
   11     | body . br_tag data
   12     | body . p_tag data
   13     | body . header_tag data
   14     | body . list_tag data
   15     | body . div_tag data
   16     | body . format_tag data
   17     | body . subsup_tag data
   18     | body . img_tag data
   19     | body . table_tag data
   49 format_tag: B_S body . B_E

    HREF_S    shift, and go to state 19
    FONT_S    shift, and go to state 20
    CENTER_S  shift, and go to state 21
    BR        shift, and go to state 22
    P_S       shift, and go to state 23
    H1_S      shift, and go to state 24
    H2_S      shift, and go to state 25
    H3_S      shift, and go to state 26
    H4_S      shift, and go to state 27
    UL_S      shift, and go to state 28
    OL_S      shift, and go to state 29
    DL_S      shift, and go to state 30
    DIV_S     shift, and go to state 31
    U_S       shift, and go to state 32
    B_S       shift, and go to state 33
    B_E       shift, and go to state 124
    I_S       shift, and go to state 34
    EM_S      shift, and go to state 35
    TT_S      shift, and go to state 36
    STRONG_S  shift, and go to state 37
    SMALL_S   shift, and go to state 38
    SUB_S     shift, and go to state 39
    SUP_S     shift, and go to state 40
    TABLE_S   shift, and go to state 41
    IMG_S     shift, and go to state 42
    FIG_S     shift, and go to state 43
    BR_S      shift, and go to state 44
